<resources>
    <string name="app_name">Stealth Performance Communication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--Letters -->
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="letter_d">D</string>
    <string name="letter_e">E</string>
    <string name="letter_f">F</string>
    <string name="letter_g">G</string>
    <string name="letter_h">H</string>
    <string name="letter_i">I</string>
    <!--Numbers-->
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <!--Colors-->
    <string name="color_blue">blue</string>
    <string name="color_red">red</string>
    <string name="color_green">green</string>
    <string name="color_cyan">cyan</string>
    <string name="color_purple">purple</string>
    <string name="color_gray">gray</string>
    <string name="color_yellow">yellow</string>
    <string name="color_pink">pink</string>
    <string name="color_orange">orange</string>

    <string name="confirm">Confirm</string>
    <string name="start_over">Start Over</string>

    <string name="title_activity_choose_color">ChooseColorActivity</string>
    <string name="title_activity_choose_letter">ChooseLetterActivity</string>
    <string name="title_activity_choose_number">ChooseNumberActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="title_activity_client_strategy">ClientStrategyActivity</string>
    <string name="title_activity_show_description">ShowDescriptionActivity</string>
</resources>
