<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.3333"
            android:layout_height="0dp">

            <Button
                android:text="@string/color_red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonRed"
                android:layout_below="@+id/numberButton2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:background="#ff0000"
                android:onClick="selectColor"/>

            <Button
                android:text="@string/color_blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonBlue"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="#0000ff"
                android:onClick="selectColor"/>

            <Button
                android:text="@string/color_green"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonGreen"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#00ff00"
                android:onClick="selectColor"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.3333"
            android:layout_height="0dp" >

            <Button
                android:text="@string/color_pink"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonPink"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:background="#ff00fe"
                android:onClick="selectColor"/>

            <Button
                android:text="@string/color_orange"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonOrange"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="#ff8f00"
                android:onClick="selectColor"/>

            <Button
                android:text="@string/color_cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonCyan"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#00fffc"
                android:onClick="selectColor"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.3333"
            android:layout_height="0dp" >

            <Button
                android:text="@string/color_purple"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonViolet"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:background="#b609ff"
                android:onClick="selectColor"/>

            <Button
                android:text="@string/color_yellow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonYellow"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="#fffb00"
                android:onClick="selectColor"/>

            <Button
                android:text="@string/color_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/colorButtonGray"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#919191"
                android:onClick="selectColor"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>