<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.broadgames.stealthperformancecommunication.ConfirmationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
        <TextView android:text="@string/hello_world" android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center" android:textSize="64dp"
            android:id="@+id/finalStrategyTextView" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center">
        <Button
            android:id="@+id/confirmStrategyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm"
            android:onClick="onConfirmSelection" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_over"
            android:onClick="onStartOver"
            android:id="@+id/StartOverButton" />
    </LinearLayout>

</LinearLayout>
